# toadofsky

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  configuration.json  test_plugin.cpp  test_plugin_pub.cpp
.devcontainer/: devcontainer.json
examples/: CMakeLists.txt  Makefile  README.md
examples/basic/: CMakeLists.txt  basic_orchestrator.cpp  basic_pool_orchestrator.cpp
examples/basic/basic_library/: CMakeLists.txt
examples/basic/basic_library/models/: model_b.hpp
examples/basic/basic_library/modules/: module_a.cpp  module_a.hpp  module_b.cpp  module_b.hpp  module_c.cpp  module_c.hpp
examples/example_basic/: basic_pool_orchestrator.cpp
examples/example_basic/basic_library/: CMakeLists.txt
examples/example_basic/basic_library/models/: CMakeLists.txt  model.hpp  model_a.hpp
examples/example_basic/basic_library/modules/: CMakeLists.txt  module_a.cpp  module_b.cpp  module_b.hpp  module_c.cpp
examples/example_plugin/: CMakeLists.txt  configuration.json  test_plugin.cpp  test_plugin_pub.cpp
examples/example_simulation/: CMakeLists.txt  simulation_spawn.cpp
examples/example_simulation/components/: CMakeLists.txt
examples/example_simulation/components/models/: CMakeLists.txt  nbody.hpp
examples/example_simulation/components/modules/: spawn_module.cpp
examples/simulation_spawn/: CMakeLists.txt  conanfile.py  simulation_spawn.cpp
examples/simulation_spawn/components/models/: body.hpp  nbody.cpp
examples/simulation_spawn/components/modules/: CMakeLists.txt  nbody_module.cpp  nbody_module.hpp  spawn_module.cpp  spawn_module.hpp
include/toadofsky/: toadofsky.hpp
include/toadofsky/broker/: broker.hpp  message.hpp  subscriber.hpp
include/toadofsky/module/: module.hpp
include/toadofsky/orchestrator/: orchestrator.hpp  pool_orchestrator.hpp  threadpool.hpp
include/toadofsky/plugin/: shared_library.hpp
src/: CMakeLists.txt  main.cpp
src/broker/: CMakeLists.txt  broker.hpp  message.hpp  subscriber.hpp
src/compose/: CMakeLists.txt  compose.cpp  compose.hpp
src/models/: CMakeLists.txt  model.hpp  model_a.cpp  model_a.hpp  model_b.cpp  model_b.hpp  model_c.cpp  model_c.hpp
src/modules/: CMakeLists.txt  module.hpp  module_a.cpp  module_a.hpp  module_b.cpp  module_b.hpp  module_c.cpp  module_c.hpp
src/orchestrator/: CMakeLists.txt  orchestrator.cpp  orchestrator.hpp  pool_orchestrator.cpp  pool_orchestrator.hpp  threadpool.hpp
src/orchestrators/: CMakeLists.txt  orchestrator.cpp  orchestrator.hpp  pool_orchestrator.cpp  pool_orchestrator.hpp  threadpool.hpp
